<resources>
    <string name="app_name">毕业生之黄金岁月</string>
    <string name="versionName">version 1.6.8</string>
    <string name="authorEmail">neday@bk.ru</string>
    <string name="teamSlogan">小苹果,让生活更简单!</string>
    <string name="ImageViewDescription">TODO</string>
    <string name="settings">设置</string>
    <string name="phone">手机号码</string>
    <string name="nick">昵称</string>
    <string name="sex">性别</string>
    <string name="music">音乐</string>
    <string name="sound">音效</string>
    <string name="splash">初始化</string>
    <string name="about">关于</string>
    <string name="help">游戏提示</string>
    <string name="top">排行榜</string>
    <string name="tv_start_b">毕业方向</string>
    <string name="tv_start_a">你的信息</string>
    <string name="tv_position_0">人才市场</string>
    <string name="tv_car_0">汽车超市</string>
    <string name="tv_house_0">房产中介</string>
    <string name="tv_lottery_0">彩票中心</string>
    <string name="tv_partner_0">红娘会馆</string>
    <string name="tv_stock_0">股票市场</string>
    <string name="exit_or_un">退出游戏</string>
    <string name="exit_or_un_0">确定要退出游戏吗？</string>
    <string name="restart_or_un">重新开始</string>
    <string name="restart_or_un_0">您的存档将重置，\n确定要重新开始游戏吗？</string>
    <string name="no_save">当前无存档！</string>
    <string name="load_or_un">是否读档</string>
    <string name="save_success">存档成功！</string>
    <string name="load_times_run_out">可读档次数不足，读档失败！</string>
    <string name="load_success">读档成功！</string>
    <string name="return_main_or_un">返回主菜单</string>
    <string name="return_main_or_un_0">确定要返回主菜单吗？</string>
    <string name="start_a_0">\t\t\t\t青春泪流满面，在22岁生日那天终于领到了大学毕业证书。\n\t\t\t\t告别同窗校友走向社会的你踌躇满志，希望能干一番事业。\n\t\t\t\t但是面对社会，你如何在你的黄金岁月里选择你走的道路？\n\n\t\t\t\t人说三十而立，你想知道你三十岁之时你将会是什么样子？\n\t\t\t\t那就做出你的选择吧！祝你能马到成功！</string>
    <string name="start_a_sex">\t\t\t\t请选择你的性别：</string>
    <string name="sex_0">女生</string>
    <string name="sex_1">男生</string>
    <string name="start_b">\t\t\t\t哈哈，终于毕业啦，总不能呆在家里混吃等死吧！\n\t\t\t\t我乃有志青年，前途光芒万丈！\n\t\t\t\t是该为这个社会献出光和热的时候了。\n\t\t\t\t让我大步流星闯社会！GO!GO!GO!</string>
    <string name="start_b_0">找工作</string>
    <string name="start_b_0_0">因为没有工作经验，所以在如洪水泛滥般的人才市场中，你感觉如同一片树叶，随着洪流被抛上沉下。\n在你投了N份简历之后，终于有公司相中了你。</string>
    <string name="start_b_0_1">开启你的职场生涯！</string>
    <string name="start_b_1">自己创业</string>
    <string name="start_b_1_0">毛爷爷教导我们:\n要自力更生，艰苦创业。\n所以你想从家里借点钱，开一家服装店，开始自己的小店经营。</string>
    <string name="start_b_1_1">老爸老妈说俺还没有经商的头脑和经验，还是现在外历练历练吧！</string>
    <string name="start_b_2">考研</string>
    <string name="start_b_2_0">考研可以延缓就业，\n提高自己的文凭等级。\n但考研大军千军万马，没有金钢钻，\n哪敢揽瓷器活？\n你确认要考研究生吗？</string>
    <string name="start_b_2_1">读研的阶段，耗费你不少黄金岁月，在这几年里，发生了很多事情，都与你的个性与选择有关。\n就业在即，现将你读研阶段的机遇与努力化为一个幸运礼盒，请选择和抽取其中一个，以助你在未来的开拓中获得更多的资本！</string>
    <string name="start_b_3">考公务员</string>
    <string name="start_b_3_0">近两年参加公务员考试人数猛增，\n出现上万人竞聘一个岗位的情形，\n可见其诱惑力。你确认要参与吗？</string>
    <string name="start_b_3_1">笔试通过了，\n可是在面试时莫名其妙的裁了！</string>
    <string name="start_b_4">出国</string>
    <string name="start_b_4_0">出国啦，出国啦，哈哈！\n因为你没有钱，望着GRE考试你又望而却步，所以你只有找中介公司出国务工咯！</string>
    <string name="start_b_4_1">受骗啦！受骗啦！\n出国劳务中介公司介绍我去伊拉克！差点被绑架呀！</string>
    <string name="jtbg_0">你的家庭背景：\n\t\t你的初始经验、能力+300，道德+100</string>
    <string name="jtbg_1">你的家庭背景：\n\t\t你的初始基金+20000，健康、快乐+50</string>
    <string name="jtbg_2">你的家庭背景：\n\t\t你的初始基金+100000，交际+50</string>
    <string name="jtbg_3">你的家庭背景：\n\t\t你的初始基金+500000，结局分数-20%</string>
    <string name="xgqx_0">你的性格趋向：\n\t\t你的初始健康、快乐+50</string>
    <string name="xgqx_1">你的性格趋向：\n\t\t你的初始交际+50</string>
    <string name="xgqx_2">你的性格趋向：\n\t\t你的初始道德+50</string>
    <string name="xgqx_3">你的性格趋向：\n\t\t你的初始经验、能力+200</string>
    <string name="dxzy_0">你的大学专业：\n\t\t你的初始经验、能力+200</string>
    <string name="dxzy_1">你的大学专业：\n\t\t你的初始快乐+50</string>
    <string name="dxzy_2">你的大学专业：\n\t\t你的初始交际+50</string>
    <string name="dxzy_3">你的大学专业：\n\t\t你的初始健康+50</string>
    <string name="gzfx_0">你的工作方向：\n\t\t你的初始经验、能力+200</string>
    <string name="gzfx_1">你的工作方向：\n\t\t你的初始快乐+50</string>
    <string name="gzfx_2">你的工作方向：\n\t\t你的初始交际+50</string>
    <string name="gzfx_3">你的工作方向：\n\t\t你的初始事业机遇指数+1</string>
    <string name="yxnd_0">你的游戏难度：\n\t\t你的初始数据为原始值，结局计分100%</string>
    <string name="yxnd_1">你的游戏难度：\n\t\t你的初始爱情事业机遇指数+1，结局分数-10%</string>
    <string name="yxnd_2">你的游戏难度：\n\t\t你的初始数值均为理想值，结局分数-40%</string>
    <string name="yxnd_3">你的游戏难度：\n\t\t你的初始数值均为梦幻值，结局无分数</string>
    <string name="car_0">小型节油低档车\n售价:40000元\n月花费:600元 </string>
    <string name="car_1">经济实用中档车\n售价:120000元\n月花费:1000元</string>
    <string name="car_2">豪华舒适中档车\n售价:350000元\n月花费:1500元</string>
    <string name="car_3">超豪华享受高档车\n售价:1600000元\n月花费:3000元</string>
    <string name="car_4">时尚拉风跑车\n售价:2500000元\n月花费:4000元</string>
    <string name="buy">购买</string>
    <string name="sell">出售</string>
    <string name="apply">应聘</string>
    <string name="position_no_ae">对不起，能力、经验不足！</string>
    <string name="position">有以下的职位可以让你选择：</string>
    <string name="position_11">海外驻华公司  高层老总 \n月收入35200</string>
    <string name="position_10">国内知名公司  高层老总 \n月收入26400</string>
    <string name="position_9">国内中小公司  高层老总 \n月收入17600</string>
    <string name="position_8">海外驻华公司  中层经理 \n月收入17600</string>
    <string name="position_7">国内知名公司  中层经理 \n月收入13200</string>
    <string name="position_6">国内中小公司  中层经理 \n月收入8800</string>
    <string name="position_5">海外驻华公司  基层主管 \n月收入8800</string>
    <string name="position_4">国内知名公司  基层主管 \n月收入6600</string>
    <string name="position_3">国内中小公司  基层主管 \n月收入4400</string>
    <string name="position_2">海外驻华公司  基层员工 \n月收入4400</string>
    <string name="position_1">国内知名公司  基层员工 \n月收入3300</string>
    <string name="position_0">国内中小公司  基层员工 \n月收入2200</string>
    <string name="house_no_money">对不起，你没有那么多钱购买该房产！</string>
    <string name="house">本月房价指数：</string>
    <string name="house_0">1室1厅 30m³</string>
    <string name="house_1">2室1厅 50m³</string>
    <string name="house_2">2室2厅 80m³</string>
    <string name="house_3">3室1厅 100m³</string>
    <string name="house_4">3室2厅 120m³</string>
    <string name="house_5">4室2厅 150m³</string>
    <string name="house_6">市郊豪华小别墅</string>
    <string name="house_7">城区超豪华别墅</string>
    <string name="stock">提示：\n\t\t整数交易，最小交易额100元，单边交易费用0.5% \n\t\t相对盈亏率为本次比上次相对盈亏，非绝对盈亏率"</string>
    <string name="stock_no_money">对不起，你没有那么多钱！</string>
    <string name="stock_no_stock">对不起，你没有那么股票！</string>
    <string name="stock_min_money">对不起，最小交易额为100元，请输入正确的数字！</string>
    <string name="car_no_money">对不起，你的钱不够买这辆车！</string>
    <string name="lottery">每次购买彩票花费100元 每月只能购买一次 \n是否中奖及奖金买后即显示在下方 \n一等奖机率千分之一，奖金500万 \n二等奖机率千分之五，奖金50万 \n三等奖机率千分之十，奖金5万</string>
    <string name="partner">欢迎光临红娘婚介，你想寻找理想伴侣吗？我可以安排你和十大美女见面。 \n如果双方都觉得不错，就可以相互交往成为男女朋友进而走向婚姻。 \n每月只能见其中一位，每次花费1000元。</string>
    <string name="partner_plus">红娘婚介的十大美女，对男朋友的选择会有不同的要求： \n施施：有2室2厅或3室1厅的房子，过大和过小都会影响她对家庭温馨和安全的需求。 \n阿禅：金钱大于200万，因为她需要你支持她在歌坛发展。 \n昭君：你要是“海外驻华公司中层经理”或“海外驻华公司高层老总”。 \n玉环：你要是“国内知名公司高层老总”或“海外驻华公司高层老总”。 \n圆圆：她需要你的交际网，你的交际能力要大于750。 \n香香：你要有超豪华享受高档车或时尚拉风跑车。 \n十娘：对你为人要求很高，你的道德要大于750。 \n小小：对你的身体健壮要求很高，你的健康要大于750。 \n飞燕：需要你的幽默和乐观，你的快乐要大于750。 \n莺莺：希望你年龄大一点，年龄要大于28岁。</string>
    <string name="partner_0">施施</string>
    <string name="partner_1">阿禅</string>
    <string name="partner_2">昭君</string>
    <string name="partner_3">玉环</string>
    <string name="partner_4">圆圆</string>
    <string name="partner_5">香香</string>
    <string name="partner_6">十娘</string>
    <string name="partner_7">小小</string>
    <string name="partner_8">飞燕</string>
    <string name="partner_9">莺莺</string>
    <string name="partner_0_plus">施施说：“我希望安全感，希望能有温馨的家庭生活。你不适合我。”</string>
    <string name="partner_1_plus">阿婵说：“我希望成名，希望能成为歌坛新一代天后。你不适合我。”</string>
    <string name="partner_2_plus">昭君说：“我希望我的老公比我强。而你，不是我要找的那个人。”</string>
    <string name="partner_3_plus">玉环说：“我是一个事业心很强的人，而我希望我的老公也是这样，你还打不到我要求。”</string>
    <string name="partner_4_plus">圆圆说：“我需要一个志同道合交友广济的男朋友。你不适合我。”</string>
    <string name="partner_5_plus">香香说：“我想你载着我夜晚游车河。可惜你都没有一辆好车。”</string>
    <string name="partner_6_plus">十娘说：“我需要一个诚实正直，孝敬父母，疼爱我的老公，你还不适合我。”</string>
    <string name="partner_7_plus">小小说：“我希望我的男朋友是个运动员，强壮而迷人的身体能够很好的保护我。”</string>
    <string name="partner_8_plus">飞燕说：“我的工作压力很大，只希望我的男朋友能够风趣幽默，让我开心。你还不适合我。”</string>
    <string name="partner_9_plus">莺莺说：“我没有别的要求，指向找一个成熟稳重点的男朋友，你还不适合我。”</string>
    <string name="opportunity">机遇之窗</string>
    <string name="opportunity_0">你通过大量学习阅读一些专业书籍，使你逐渐成为该行业的精英人才，有个女生非常钦佩你的学问，希望与你结识朋友一起研究探讨。请问你如何对待这位女性仰慕者？</string>
    <string name="opportunity_0_a">1、"非常热情的与她一起探讨，共同进步。"</string>
    <string name="opportunity_0_b">2、"利用与她的接触机会，趁机发展情侣关系。"</string>
    <string name="opportunity_0_c">3、"有空就敷衍她一下，没太多时间理会她。"</string>
    <string name="opportunity_0_d">4、"不理会她的追求，专心自己的学习。"</string>
    <string name="opportunity_1">你博览群书，知识渊博，上知天文，下知地理，与人交谈，引经据典，舌灿莲花，口若悬河。一次遭遇一奇女子，口舌交锋中居然知识口才更胜你一筹，你如何对待她？</string>
    <string name="opportunity_1_a">1、"对她的景仰之情有如滔滔江水连绵不绝。"</string>
    <string name="opportunity_1_b">2、"甘拜下风，从此在她面前不敢班门弄斧。"</string>
    <string name="opportunity_1_c">3、"遇强则强，针锋相对，不压倒她誓不罢休。"</string>
    <string name="opportunity_1_d">4、"引为知己，从此高山流水，拈花一笑。"</string>
    <string name="opportunity_2">下班后你喜欢与同事们流连于各种酒吧、迪厅、KTV，灯红酒绿，夜夜笙歌。一次醉酒，借着酒意对一女同事倾述心声，还壮着胆子亲了人家一口。酒醒后你如何面对此事？</string>
    <string name="opportunity_2_a">1、"向女同事道歉，说当时是酒精冲昏头脑。"</string>
    <string name="opportunity_2_b">2、"说酒后吐真言，趁机向女同事表明爱意。"</string>
    <string name="opportunity_2_c">3、"假装忘记此事，就当什么也没有发生过。"</string>
    <string name="opportunity_2_d">4、"保持这种暧昧关系，下次还接着吃豆腐。"</string>
    <string name="opportunity_3">同学朋友聚会，心眼多的钻被窝，心眼少的在唠嗑，不多不少的在乱摸，一个心眼的在唱歌，缺心眼的在死喝。你在某次聚会中遇到自己以前喜欢的女同学，你如何面对？</string>
    <string name="opportunity_3_a">1、"温文尔雅，问好祝福，今后会多多联系。"</string>
    <string name="opportunity_3_b">2、"眉目传情，借机靠近，看能否再续前缘。"</string>
    <string name="opportunity_3_c">3、"风雨飘摇，暗香浮动，人生若只如初见。"</string>
    <string name="opportunity_3_d">4、"互换名片，交流人脉，情侣不成生意在。"</string>
    <string name="opportunity_4">工作之余，你喜欢和朋友一起逛街吃饭，看着大街上时尚靓丽的美女穿梭，的确是种享受。一日你一哥们因临时有事委托你陪他卡哇伊的妹妹逛街吃饭，你如何处理此事？</string>
    <string name="opportunity_4_a">1、"谦谦君子，温润如玉，悉心照顾小妹妹。"</string>
    <string name="opportunity_4_b">2、"吃好喝好玩好，哥们的妹就是自己的妹。"</string>
    <string name="opportunity_4_c">3、"观察了解，投其所好，试探能否进一步。"</string>
    <string name="opportunity_4_d">4、"有美女相伴，自当欣然相陪，乐在其中。"</string>
    <string name="opportunity_5">陌生的地点，陌生的人，一场风花雪月的邂逅，一个怦然心动的瞬间，旅行中的艳遇，可遇而不可求。这次，你就遇到这样一位女子，你期待怎样一场旅游中的艳遇呢？</string>
    <string name="opportunity_5_a">1、"美丽大方开朗，如一场成熟爱情的演习。"</string>
    <string name="opportunity_5_b">2、"精彩优雅抚慰，值得你一生细细去品味。"</string>
    <string name="opportunity_5_c">3、"情趣洒脱直接，纯粹的身体解放与享受。"</string>
    <string name="opportunity_5_d">4、"欣赏含蓄暧昧，今生有缘放待来生再续。"</string>
    <string name="opportunity_6">你参加了很多专业培训，提高自己的专业素养和技能。这次的培训师，是位美艳大方而又富有内涵的女子，一见之下，简直惊为天人，你会怎样面对这样一位美女培训师？</string>
    <string name="opportunity_6_a">1、"心如止水，专心培训，不能白花培训费。"</string>
    <string name="opportunity_6_b">2、"男女搭配，欣赏品味，学习效率更提高。"</string>
    <string name="opportunity_6_c">3、"明修栈道，暗渡陈仓，发展情侣也不错。"</string>
    <string name="opportunity_6_d">4、"虚心请教，引为知己，真诚交往做朋友。"</string>
    <string name="opportunity_7">会休息的人才会工作，工作之余，静下心来，品一杯清茶，睡一个好觉，做个白日梦，未尝不是一种幸福。有时候，你问自己到底要的是什么呢？追求的是什么呢？</string>
    <string name="opportunity_7_a">1、"工作稳定收入不菲，温馨的家庭生活。"</string>
    <string name="opportunity_7_b">2、"激情生活事业腾达，人生辉煌的成就。"</string>
    <string name="opportunity_7_c">3、"三两好友知心爱人，平平淡淡才是真。"</string>
    <string name="opportunity_7_d">4、"阅尽美景美食美人，人不风流枉少年。"</string>
    <string name="opportunity_8">你经常选择熬夜加班，希望能多完成一些工作，多一些额外的收入，然而健康状态每况愈下。这时出现了一位女同事，很关心你，常给你买宵夜买水果，你如何面对她？</string>
    <string name="opportunity_8_a">1、"心存感激，温柔相对，彼此相互温暖。"</string>
    <string name="opportunity_8_b">2、"欣然接受，专注工作，待成功再回报。"</string>
    <string name="opportunity_8_c">3、"减少加班，抽空陪她，不负她的关爱。"</string>
    <string name="opportunity_8_d">4、"心有愧意，委婉拒绝，我心已有所属。"</string>
    <string name="opportunity_9">经常上网的你，沉迷于聊天与网游，也认识了不少网友。其中有一位聊得很投机的女网友，你感觉自己已渐渐陷入其中。这天，女网友说要来和你见面，你如何去面对？</string>
</resources>