<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_partner"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.gameFragment.PartnerFragment">

    <TextView
        android:id="@+id/tv_partner_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tv_partner_0"
        android:textColor="@color/base_color_text_black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tv_partner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_partner_0"
        android:background="@color/color_half_transparent"
        android:text="@string/partner"
        android:textColor="@color/base_color_text_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_partner"
        android:background="@color/color_half_transparent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_partner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_partner_condition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/partner_plus"
            android:textColor="@color/base_color_text_white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_partner_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_partner_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_0"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_1"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_2"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_3"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_4"
                android:textColor="@color/base_color_text_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_partner_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_partner_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_5"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_6"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_7"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_8"
                android:textColor="@color/base_color_text_white" />

            <ImageView
                android:id="@+id/iv_partner_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/ImageViewDescription"
                android:src="@mipmap/partner_9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partner_9"
                android:textColor="@color/base_color_text_white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
